# SendMessage

./: .gitignore  README.md  pyproject.toml
examples/: read_file_demo.py  send_dingtalk_async.py  send_dingtalk_sync.py  send_email_async.py  send_email_sync.py  send_markdown_test.py  send_wecom_app_async.py  send_wecom_app_sync.py  send_wecom_webhook_async.py  send_wecom_webhook_sync.py  test_attachment_sync.txt  test_markdown.md  test_send_dingtalk.py  test_send_dingtalk_async.py  test_send_email.py  test_send_email_async.py  test_send_wecom_app.py  test_send_wecom_app_async.py  test_send_wecom_app_image.py  test_send_wecom_webhook.py  test_send_wecom_webhook_async.py
xqcsendmessage/: __init__.py  api.py  client.py
xqcsendmessage/core/: __init__.py  abc.py  exceptions.py  logger.py  utils.py
xqcsendmessage/dingtalk/: __init__.py  sender.py
xqcsendmessage/email/: __init__.py  sender.py
xqcsendmessage/wecom/: __init__.py  sender.py
